# cabbagecrow-idea-loggies

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: apple-shortcuts.md
docs/superpowers/plans/: 2026-05-19-cabbagecrow-desktop-pet.md  2026-05-20-cabbagecrow-free-range-idea-bucket.md
docs/superpowers/specs/: 2026-05-19-standalone-macos-pet-design.md  2026-05-20-cabbagecrow-free-range-idea-bucket-design.md
public/pets/cabbagecrow/: pet.json  validation.json
scripts/: build_cabbagecrow_atlas.py  generate_app_icon.py  make_dmg_background.py  package_macos_release.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/pet/: PetDashboard.tsx  PetSprite.source.test.ts  PetSprite.tsx  animation.test.ts  animation.ts  assetPackage.test.ts  cursorPassthrough.test.ts  cursorPassthrough.ts  dashboardStats.test.ts  dashboardStats.ts  dashboardSync.test.ts  dashboardSync.ts  dashboardWindow.ts  dashboardWindowAffordance.test.ts  dashboardWindowConfig.test.ts  freeRange.test.ts  freeRange.ts  interaction.test.ts  interaction.ts  releasePackaging.test.ts  releaseVersion.test.ts  settings.ts  shortcut.test.ts  shortcut.ts  size.test.ts  size.ts  sparks.test.ts  sparks.ts  types.ts  windowChrome.test.ts  windowGeometry.test.ts  windowGeometry.ts
