[package]
name = "cabbagecrow-desktop-pet"
version = "0.1.0"
description = "A playful CabbageCrow desktop pet."
authors = ["Tracy Han"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
